--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,21 @@ nav{
     display: flex;          
     list-style: none;        
     padding: 0;              
-    justify-content: center;
+    justify-content: left;
+    margin-left: 10%;
+    margin-bottom: 5%;
+    margin-top: 8%;
 }
 Body{
     background-color: #2D0084;
-    background-color: linear-gradient(0deg,rgba(45, 0, 132, 1) 0%, rgba(84, 0, 209, 1) 100%);
+    background: linear-gradient(180deg, #2D0085 0%, #25006D 35.98%, #170044 99.56%);
     width: 100%;
     height: 100%;
 }
-
+.logo{
+    height: 2.5rem;
+    margin-right: 1rem;
+}
 .Titulos{
     color: white;
     font-size: 2rem;
@@ -43,10 +49,11 @@ Body{
 .form-input{
     width: 80%;
     border-radius: 1rem;
-    height: 2.2rem;
+    height: 2.5rem;
     margin-top: 2%;
+    margin-bottom: 0.5rem;
     font-size: 1rem;
-    background-color: #4700bb;
+    background: linear-gradient(180deg, #5D00E8 0%, #2D0084 100%);
 }
 
 .texto-general{
@@ -56,4 +63,38 @@ Body{
 .checkbox-container{
     margin-left: 10%;
     margin-top: 5%;
+}
+
+.buttons-container{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%; 
+
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+}
+
+button{
+    color: white;
+    font-family: sans-serif;
+    font-size: 16px;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 35px;
+    cursor: pointer;
+    transition: transform 0.1s;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
+
+.btn:active {
+    transform: scale(0.96);
+}
+
+.btn-atras {
+    background: linear-gradient(to bottom, #6200ea, #30009c);
+}
+
+.btn-siguiente {
+    background: linear-gradient(to bottom, #00c090, #009570);
 }
