redirecciones a traves del index unico, ahora el header es reciclable, prg

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -114,7 +114,7 @@ Body, html {
     to {translate: -100%;}
 }
 
-.navbar {
+.header {
     display: flex;          
     list-style: none;        
     padding: 0;              
@@ -127,7 +127,7 @@ Body, html {
 }
 
 
-.brillo-logo-navbar {
+.brillo-logo-header {
     display: block;
     margin-left: 2.2rem;
     margin-right: 1.5rem;
