--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -21,10 +21,20 @@
     display: flex;
     align-items: center;
     height: 2.5rem;
-    width: 100%;
+    width: 90%;
     margin-top: 2%;
     margin-bottom: 0.5rem;
     margin-left: 1rem;
+}
+
+.container-between{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2.5rem;
+    width: 100%;
+    margin-top: 2%;
+    margin-bottom: 0.5rem;
 }
 
 .register-container{
@@ -59,6 +69,17 @@
 
     display: flex;
     justify-content: space-between; 
+    align-items: center;
+}
+
+.file-container{
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 2.5%;
+
+    display: flex;
+    justify-content: center; 
     align-items: center;
 }
 
