Avances de mensajeria pero me tengo que ir NO HACER MERGE, HAY UN ERROR FUERTE

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,6 +2,7 @@
 @import url(colors.css);
 @import url(text.css);
 @import url(containers.css);
+@import url(messages.css);
 
 /* Honestamente no supe en  que categoria meter estos estilos xd */
 
