--- a/public/styles/components.css
+++ b/public/styles/components.css
@@ -33,6 +33,23 @@ button{
         -5px      /* Propagación negativa (opcional, ayuda a concentrarla) */
         rgba(0, 0, 0, 0.5);
 }
+.search-input{
+    width: 100%;
+    border-radius: 1rem;
+    height: 2.5rem;
+    margin-top: 2%;
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    background: linear-gradient(180deg, #5D00E8 0%, #2D0084 100%);
+    color: white;
+    padding-left: 1rem;
+
+    box-shadow: 
+        10px 10px /* Desplazamiento a la derecha y abajo */
+        15px      /* Desenfoque */
+        -5px      /* Propagación negativa (opcional, ayuda a concentrarla) */
+        rgba(0, 0, 0, 0.5);
+}
 
 select option {
     background-color: #2D0084; 
