--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -1,5 +1,19 @@
 /* CONTENEDORES */
-
+.chats-container{
+    display: flex;
+    align-items: center;
+    height: 2.5rem;
+    width: 90%;
+    margin-top: 2%;
+    margin-bottom: 0.5rem;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.search-container{
+    margin-top: 5%;
+    margin-bottom: 2%;
+    width: 100%;
+}
 .container-form-login{
     align-items: center;
     text-align: center;
