--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -129,3 +129,33 @@ input[type="checkbox"] {
     font-size: 16px;
     color: #ffffff7e;
 }
+
+.container-scroll-y {
+    margin-top: 0;
+    height: 12rem;
+    overflow-y: scroll; 
+    border-radius: 1rem;
+
+    /* Estilos adicionales opcionales para visualización */
+    width: 80%;
+    padding: 10px;
+    background: linear-gradient(#56467E, #36294A);
+
+    box-shadow: 
+        inset 10px 10px 30px 3px rgba(0, 0, 0, 0.25);
+}
+
+.container-scroll-y::-webkit-scrollbar {
+  display: none; /* La propiedad clave */
+}
+
+.container-item-scroll {
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+    background-color: transparent;
+    border: #ffffff7e;
+    color: white;
+    font-size: 1rem;
+}
