register 2, 3, 4 listos a faltas de revisiones basicas y back, mogollon de clases y correcciones generales hay de por medio

--- a/public/styles/components.css
+++ b/public/styles/components.css
@@ -85,3 +85,15 @@ input[type="file"] {
 .upload-button-styled {
     display: none;
 }
+
+.img-perfil{
+    width: 6.5rem;
+    height: 6.5rem;
+    border-radius: 1rem;
+}
+
+.img-general{
+    width: 5.625rem;
+    height: 5.625rem;
+    border-radius: 1rem;
+}
