--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -27,6 +27,15 @@
     margin-left: 1rem;
 }
 
+.container-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin-top: 2%;
+    margin-left: 1rem;
+}
+
 .container-between{
     display: flex;
     justify-content: center;
@@ -66,6 +75,7 @@
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 5%; 
+    margin-bottom: 5%;
 
     display: flex;
     justify-content: space-between; 
@@ -94,8 +104,8 @@
     margin-left: 10%;
     background-color: #27134e; 
     border-radius: 1rem;  
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 0.45rem;
+    padding-bottom: 1.25rem;
 
     box-shadow: 
         inset 10px 10px 30px 3px rgba(0, 0, 0, 0.25);
