--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -169,3 +169,10 @@ input[type="checkbox"] {
     color: white;
     font-size: 1rem;
 }
+
+#container_nacimiento {
+    text-align: left;
+    display: flex;
+    margin-left: 0;
+    margin-right: auto;
+}
