--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -176,3 +176,88 @@ input[type="checkbox"] {
     margin-left: 0;
     margin-right: auto;
 }
+
+.container-navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 5.25rem;
+    background: linear-gradient(#5D00E8 0%, #2D0084 100%);
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
+
+.icono-navbar {
+    width: 3.75rem;
+    height: 3.75rem;
+    margin: auto;
+    cursor: pointer;
+}
+
+.buttons-container-center-feed{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    width: 100%;
+    margin-top: 2rem;
+}
+
+.container-feed-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 5.25rem;
+    background: linear-gradient(#56467E 0%, #36294A 100%);
+    border-radius: 1rem;
+}
+
+.btn-feed-x{
+    width: 3.75rem;
+    height: 3.75rem;
+    margin: auto;
+    cursor: pointer;
+    border-radius: 1rem;
+    background: linear-gradient(#FF0066 0%, #8E0036 100%);
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-feed-next{
+    width: 3.75rem;
+    height: 3.75rem;
+    margin: auto;
+    cursor: pointer;
+    border-radius: 1rem;
+    background: linear-gradient(#5D00E8 0%, #2D0084 100%);
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-feed-like{
+    width: 3.75rem;
+    height: 3.75rem;
+    margin: auto;
+    cursor: pointer;
+    border-radius: 1rem;
+    background: linear-gradient(#00B17E 0%, #005B41 100%);
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 5.25rem;
+    background: linear-gradient(#56467E 0%, #36294A 100%);
+    border-radius: 1rem;
+}
