--- a/public/styles/text.css
+++ b/public/styles/text.css
@@ -19,6 +19,13 @@
     margin: 0;
 }
 
+.Subtitulos-gris {
+    color: #ffffff7e;
+    font-size: 0.875rem;
+    font-family: 'LEMON-MILK-Regular';
+    margin: 0;
+}
+
 .texto-general {
     color: white;
     font-size: 1rem;
