--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -219,6 +219,14 @@ input[type="checkbox"] {
     margin-top: 2rem;
 }
 
+.container-left{
+    display: flex;
+    align-items: center;
+    width: 90%;
+    margin-top: 2rem;
+    margin-left: 20px;
+}
+
 .container-feed-buttons {
     display: flex;
     justify-content: center;
@@ -345,4 +353,24 @@ input[type="checkbox"] {
     height: 2rem;
     background: linear-gradient(#56467E 0%, #36294A 100%);
     border-radius: 14px;
+}
+
+.img-perfil {
+    width: 120px;
+    height: 120px;
+    background-image: url('../media/test.jpg');
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    padding: 0;
+    margin: 0;
+    border-radius: 14px;
+    border: 1px solid #ffffff7e;
+    box-sizing: border-box;
+}
+
+#container-names {
+    display: top;
+    margin-left: 1rem;
+    height: 100%;
 }
