--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -47,7 +47,6 @@
     align-items: center;
     width: 90%;
     margin-top: 2%;
-    margin-left: 1rem;
 }
 
 .container-between{
@@ -96,6 +95,17 @@
     align-items: center;
 }
 
+.button-container{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%; 
+    margin-bottom: 12%;
+
+    display: flex;
+    justify-content: right; 
+    align-items: center;
+}
+
 .file-container{
     width: 80%;
     margin-left: 10%;
@@ -141,16 +151,16 @@ input[type="date"] {
 
 input[type="checkbox"] {
     /* 1. Dimensiones y Espaciado */
-    width: 1.6rem;
-    height: 1.6rem;
+    width: 2rem;
+    height: 2rem;
     margin-right: 2rem;
 
     /* 2. Diseño del Borde y Fondo */
     border-radius: 14px; /* Bordes redondeados */
-    background-image: linear-gradient(#5D00E8, #2D0084);
+    background-image: linear-gradient(#5C467E 100%, #36294A 100%);
 
     /* 3. Tipografía */
-    font-size: 16px;
+    font-size: 2.5rem;
     color: #ffffff7e;
 }
 
@@ -192,6 +202,7 @@ input[type="checkbox"] {
 }
 
 .container-navbar {
+    z-index: 5;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -221,7 +232,6 @@ input[type="checkbox"] {
 
 .container-left{
     display: flex;
-    align-items: center;
     width: 90%;
     margin-top: 2rem;
     margin-left: 20px;
@@ -355,10 +365,10 @@ input[type="checkbox"] {
     border-radius: 14px;
 }
 
-.img-perfil {
+.img-perfil-p {
     width: 120px;
     height: 120px;
-    background-image: url('../media/test.jpg');
+    background: linear-gradient(#5D00E8 0%, #2D0084 100%);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
@@ -370,7 +380,42 @@ input[type="checkbox"] {
 }
 
 #container-names {
-    display: top;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 0;
     margin-left: 1rem;
     height: 100%;
+}
+
+#NombrePerfil {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.compartir {
+    width: 3.125rem;
+    height: 3.125rem;
+    background: linear-gradient(#5D00E8 0%, #2D0084 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    border-radius: 14px;
+    margin-right: 0.5rem;
+    cursor: pointer;
+}
+
+.btns-perfil {
+    width: auto;
+    height: 3.125rem;
+    background: linear-gradient(#5D00E8 0%, #2D0084 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 14px;
+    cursor: pointer;
+    margin-right: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
