--- a/public/styles/messages.css
+++ b/public/styles/messages.css
@@ -131,7 +131,7 @@
 
 .sendMessage-container {
     position: fixed; /* Esto lo hace "sticky" */
-    bottom: 0;
+    bottom: 5rem;
     left: 0;
     width: 100%;
     padding: 0.7rem 1rem;
